Προσθήκη αρχικών εκδόσεων αρχείων

--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Mavridis Philippe</title>
+  <title>Μαυρίδης Φίλιππος</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Didact+Gothic">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  WIP
+  <h1>Γειά σας!</h1>
+  <p><big>Είμαι ο <strong>Μαυρίδης Φίλιππος</strong> και είμαι προπτυχιακός φοιτητής στην κατεύθυνση Πολιτισμού και Πολιτισμικών Σπουδών στο <a href="https://cmc.panteion.gr" target="_blank">Τμήμα Επικοινωνίας, Μέσων και Πολιτισμού</a> του <a href="https://www.panteion.gr" target="_blank">Παντείου Πανεπιστημίου</a>.</big>
+  <p>Το υπόβαθρό μου είναι η τεχνολογία και το πάθος μου ο πολιτισμός. Διαθέτω τεχνικές και οργανωσιακές γνώσεις από διάφορα πεδία, στα οποία συµπεριλαµβάνονται η ανάλυση µεγάλων όγκων δεδοµένων (big data), η ανάτυξη και διαχείριση ιστοχώρων και webapps, η σελιδοποίηση, τα διανυσµατικά γραφικά, η οργάνωση της πληροφορίας, το µοντάζ αλλά και η διοργάνωση εκδηλώσεων.
+  <p>Παρακολουθώ στενά όλες τις εξελίξεις στον τοµέα της τεχνολογίας και ψάχνω νέους τρόπους να εφαρµοστούν αυτές στο πεδίο του πολιτισµού µε επίκεντρο την εµπειρία του χρήστη, τη βιωσιµότητα, την ηθική και τη δεοντολογία.
+  <nav>
+    <a href='cv.pdf' download>Το βιογραφικό μου (CV)</a>&nbsp;|&nbsp;
+    <a href='mailto:mavridisf@gmail.com'>emme200026@edu.panteion.gr</a>
+  </nav>
 </body>
 </html>
