--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <p>Το υπόβαθρό μου είναι η τεχνολογία και το πάθος μου ο πολιτισμός. Διαθέτω τεχνικές και οργανωσιακές γνώσεις από διάφορα πεδία, στα οποία συµπεριλαµβάνονται η ανάλυση µεγάλων όγκων δεδοµένων (big data), η ανάτυξη και διαχείριση ιστοχώρων και webapps, η σελιδοποίηση, τα διανυσµατικά γραφικά, η οργάνωση της πληροφορίας, το µοντάζ αλλά και η διοργάνωση εκδηλώσεων.
   <p>Παρακολουθώ στενά όλες τις εξελίξεις στον τοµέα της τεχνολογίας και ψάχνω νέους τρόπους να εφαρµοστούν αυτές στο πεδίο του πολιτισµού µε επίκεντρο την εµπειρία του χρήστη, τη βιωσιµότητα, την ηθική και τη δεοντολογία.
   <nav>
-    <a href='cv.pdf' download>Το βιογραφικό μου (CV)</a>&nbsp;|&nbsp;
-    <a href='mailto:mavridisf@disroot.org'>mavridisf@disroot.org</a>
+    <a href='CV.pdf' download>Το βιογραφικό μου (CV)</a>&nbsp;|&nbsp;
+    <a href='mailto:mavridisf@gmail.com'>mavridisf@gmail.com</a>a>
   </nav>
 </body>
 </html>
