--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p>Παρακολουθώ στενά όλες τις εξελίξεις στον τοµέα της τεχνολογίας και ψάχνω νέους τρόπους να εφαρµοστούν αυτές στο πεδίο του πολιτισµού µε επίκεντρο την εµπειρία του χρήστη, τη βιωσιµότητα, την ηθική και τη δεοντολογία.
   <nav>
     <a href='CV.pdf' download>Το βιογραφικό μου (CV)</a>&nbsp;|&nbsp;
-    <a href='mailto:mavridisf@gmail.com'>mavridisf@gmail.com</a>a>
+    <a href='mailto:mavridisf@gmail.com'>mavridisf@gmail.com</a>
   </nav>
 </body>
 </html>
