--- a/index.html
+++ b/index.html
@@ -7,13 +7,38 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Γειά σας!</h1>
-  <p><big>Είμαι ο <strong>Μαυρίδης Φίλιππος</strong> και είμαι απόφοιτος του <a href="https://cmc.panteion.gr" target="_blank">Τμήματος Επικοινωνίας, Μέσων και Πολιτισμού</a> του <a href="https://www.panteion.gr" target="_blank">Παντείου Πανεπιστημίου</a>.</big>
-  <p>Το υπόβαθρό μου είναι η τεχνολογία και το πάθος μου ο πολιτισμός. Διαθέτω τεχνικές και οργανωσιακές γνώσεις από διάφορα πεδία, στα οποία συµπεριλαµβάνονται η ανάλυση µεγάλων όγκων δεδοµένων (big data), η ανάτυξη και διαχείριση ιστοχώρων και webapps, η σελιδοποίηση, τα διανυσµατικά γραφικά, η οργάνωση της πληροφορίας, το µοντάζ αλλά και η διοργάνωση εκδηλώσεων.
-  <p>Παρακολουθώ στενά όλες τις εξελίξεις στον τοµέα της τεχνολογίας και ψάχνω νέους τρόπους να εφαρµοστούν αυτές στο πεδίο του πολιτισµού µε επίκεντρο την εµπειρία του χρήστη, τη βιωσιµότητα, την ηθική και τη δεοντολογία.
   <nav>
-    <a href='CV.pdf' download>Το βιογραφικό μου (CV)</a>&nbsp;|&nbsp;
-    <a href='mailto:mavridisf@gmail.com'>mavridisf@gmail.com</a>
+    <a href='CV.pdf'>Βιογραφικό</a>&nbsp;|&nbsp;
+    <a href='https://www.linkedin.com/in/mavridis-philippe/'>LinkedIn</a>&nbsp;|&nbsp;
+    <a href='contact.html'>Επικοινωνία</a>
   </nav>
+  <h1>Γειά σας!</h1>
+  <p><big>Είμαι ο <strong>Μαυρίδης Φίλιππος</strong> και είμαι μεταπτυχιακός φοιτητής στο <a href="https://cmc.panteion.gr" target="_blank">Τμήμα Επικοινωνίας, Μέσων και Πολιτισμού</a> του <a href="https://www.panteion.gr" target="_blank">Παντείου Πανεπιστημίου</a>.</big>
+  <blockquote>
+    <p>Το υπόβαθρό μου είναι η τεχνολογία και το πάθος μου ο πολιτισμός. Διαθέτω τεχνικές και οργανωσιακές γνώσεις από διάφορα πεδία, στα οποία συµπεριλαµβάνονται η ανάλυση µεγάλων όγκων δεδοµένων (big data), η ανάπτυξη και διαχείριση ιστοχώρων και webapps, η σελιδοποίηση, τα διανυσµατικά γραφικά, η οργάνωση της πληροφορίας, το µοντάζ, η σύνθεση μουσικής αλλά και η διοργάνωση εκδηλώσεων.
+  </blockquote>
+    <hr>
+    <p><b>Ο ιστότοπος βρίσκεται υπό κατασκευή</b>. Ευχαριστώ για την κατανόηση!
 </body>
+<script>
+window.onload = () => {
+    let greeting = document.querySelector("h1"),
+        hrs = (new Date()).getHours();
+
+    if (hrs > 17)
+    {
+        greeting.innerHTML = "Καλό απόγευμα!";
+    }
+
+    else if (hrs > 14)
+    {
+        greeting.innerHTML = "Καλησπέρα!";
+    }
+
+    else
+    {
+        greeting.innerHTML = "Καλημέρα!";
+    }
+}
+</script>
 </html>
