--- a/pms/index.html
+++ b/pms/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@6.1.15/index.global.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/list@6.1.15/index.global.min.js"></script>
     <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/rrule@6.1.15/index.global.min.js'></script>
-    <script src="script.js"></script>
+    <script src="script.js?r1"></script>
     <!--
         2024/10/12  * Σήμερα
                     * Ημερολόγιο: αργίες, απεργίες
