PMS: Add bibliography guide

--- a/pms/index.html
+++ b/pms/index.html
@@ -16,6 +16,12 @@
     <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/rrule@6.1.15/index.global.min.js'></script>
     <script src="script.js?r1"></script>
     <!--
+        2024/11/05  * Οδηγός βιβλιοθήκης
+                    * Σύνδεσμοι: +Google Scholar
+                    * Σύνδεσμοι: +JSTOR
+                    * Σύνδεσμοι: +Οδηγός APA (eclass)
+                    * Σύνδεσμοι: +Οδηγός εργασιών (βιβλιοθήκη)
+
         2024/10/12  * Σήμερα
                     * Ημερολόγιο: αργίες, απεργίες
                     * Ημερολόγιο: σύνδεσμοι μαθημάτων στο open eClass
@@ -85,10 +91,23 @@
         <a href="https://cmc.panteion.gr/images/Postgraduate/Odigos_Spoudon_PMS_2023-24.pdf" target="_blank">Οδηγός σπουδών ΠΜΣ 2023-24</a>
         <a href="https://sis.panteion.gr/unistudent" target="_blank">Δηλώσεις μαθημάτων/Βαθμολογίες</a>
 
-        <h3>Χρήσιμα</h3>
+        <h3>Βιβλιογραφία</h3>
         <a href="https://library.panteion.gr/" target="_blank">Βιβλιοθήκη Παντείου Πανεπιστημίου</a>
         <a href="http://pandemos.panteion.gr/index.php?lang=el&op=search_collections&type=cid&page=1&match=exact&q=isMemberOf-cid:14,isMemberOfCollection-cid:8&sort=title&asc=ASC" target="_blank">ΠΑΝΔΗΜΟΣ - Παντειακές Δημοσιεύσεις - Συλλογή «Μεταπτυχιακές εργασίες»</a>
+        <a href="https://scholar.google.com" target="_blank">Google Scholar</a>
+        <a href="https://jstor.org" target="_blank">JSTOR</a>
         <a href="https://www.dropbox.com/scl/fo/35wfe3xfxkbzhf9g4nqtl/ANiIAKh9uDx0Lyqzvc4jgyg?e=1&fbclid=IwZXh0bgNhZW0CMTEAAR093dXyLAgC4EGJPSqaLJVIEZxme8yuANV9V5CBzBn7d5hWs6gZMw9EiSc_aem_JVt32WtI42hmEEtkfhghvg&rlkey=nzdmyenwv66xrwnr6nulu8z50&st=bmd9cgjf&dl=0" target="_blank">Dropbox με χρήσιμα βιβλία <small>(Credit: Δ. Αλαγιάννης)</small></a>
+        <a href="https://openeclass.panteion.gr/modules/document/file.php/TMF352/201806_APA_Complete_final.pdf" target="_blank">Οδηγός APA (επίσημος, στα αγγλικά)</a>
+        <a href="https://library.panteion.gr/%CF%85%CF%80%CE%B7%CF%81%CE%B5%CF%83%CE%AF%CE%B5%CF%82/%CF%83%CF%85%CE%B3%CE%B3%CF%81%CE%B1%CF%86%CE%AE-%CE%B5%CF%81%CE%B3%CE%B1%CF%83%CE%B9%CF%8E%CE%BD/" target="_blank">Οδηγός συγγραφής εργασιών (περιέχει οδηγίες για τη βιβλιογραφία)</a>
+
+
+
+
+
+      </div>
+
+      <h2 class="collapsed">Αναζήτηση και πρόσβαση σε βιβλιογραφία</h2>
+      <div id="biblio" data-load="assets/biblio.png" style="display: none">
       </div>
     </main>
     <footer>
