--- a/pms/index.html
+++ b/pms/index.html
@@ -14,7 +14,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@6.1.15/index.global.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/list@6.1.15/index.global.min.js"></script>
     <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/rrule@6.1.15/index.global.min.js'></script>
-    <script src="script.js?r2"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="script.js?r3"></script>
     <!--
         2024/11/14  * Σύνδεσμοι: εμότζι και χρωματάκια
                     * Σύνδεσμοι: προσδιορισμός μορφής αρχείων
