--- a/pms/index.html
+++ b/pms/index.html
@@ -15,8 +15,12 @@
     <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/list@6.1.15/index.global.min.js"></script>
     <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/rrule@6.1.15/index.global.min.js'></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="script.js?r3"></script>
+    <script src="script.js?r4"></script>
     <!--
+    Ιστορικό σημαντικών αλλαγών
+    '''''''''''''''''''''''''''
+        2024/11/25  * Προσθήκη εορτών
+
         2024/11/14  * Σύνδεσμοι: εμότζι και χρωματάκια
                     * Σύνδεσμοι: προσδιορισμός μορφής αρχείων
                     * Σύνδεσμοι: +Βιβλιοθήκη: Οδηγίες πρόσβασης σε ηλ. πηγές
