--- a/contact.html
+++ b/contact.html
@@ -3,21 +3,38 @@
 <head>
   <meta charset="utf-8">
   <title>Μαυρίδης Φίλιππος</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Didact+Gothic">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/fontawesome.min.css" integrity="sha512-lauN4D/0AgFUGvmMR+knQnbOADyD/XuQ8VF18I8Ll0+TLvsujshyxvU+uzogmQbSq6qJd5jnUdYtK8ShxXMlSg==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/solid.min.css" integrity="sha512-bdqdas3Yr82pkTg5i0X1gcAT3tBXz/8H3J1ec7RyEKAvr/YiSCJNV2dnkukmL8CicjKb9rxmd+ILK8Kg2o2wvQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/brands.min.css" integrity="sha512-7rXIvd/xj1FnI2zKQjjXzDFxC4twqBByp8yxOgEQJs4C/aNzNyoQsOO7VxH0RgYNhbAYLJLwzqslaP50KTTHIQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="style.css">
+  <script src="common.js"></script>
 </head>
 <body>
-  <nav>
-    <a href='index.html'>&lt; Επιστροφή στην αρχική</a>
-  </nav>
-  <h1>Επικοινωνία</h1>
-
-  <h2>Ηλεκτρονική αλληλογραφία</h2>
-  <ul>
-    <li><a href='mailto:mavridisf@disroot.org'>mavridisf@disroot.org</a></li>
-    <li><a href='mailto:mavridisf@gmail.com'>mavridisf@gmail.com</a></li>
-  </ul>
-
+  <aside>
+    <a href="index.html"><img class="me" src="me.jpg" alt="Φωτογραφία"></a>
+    <h1>Φίλιππος Μαυρίδης</h1>
+    <nav>
+      <a href='CV.pdf'><i class="fa-solid fa-file-pdf"></i><span>Λήψη βιογραφικού</span></a>
+      <a href="portfolio.html"><i class="fa-solid fa-briefcase"></i><span>Χαρτοφυλάκιο</span></a>
+      <a href='https://www.linkedin.com/in/mavridis-philippe/'><i class="fa-brands fa-linkedin"></i><span>LinkedIn</span></a>
+      <a href='contact.html'><i class="fa-solid fa-envelope-open-text"></i><span>Επικοινωνία</span></a>
+      <a class="toggle-side" onclick="toggleSidebar()"><i class="fa-solid fa-angle-left"></i><span>Απόκρυψη</span></a>
+    </nav>
+  </aside>
+  <main>
+    <h2>Επικοινωνία</h2>
+    <p>Ηλεκτρονική αλληλογραφία:
+    <p><i class="fa-solid fa-at"></i> <a href="mailto:mavridisf@disroot.org">mavridisf@disroot.org</a>
+    <p><i class="fa-solid fa-at"></i> <a href="mailto:mavridisf@gmail.com">mavridisf@gmail.com</a>
+    <br><br>
+    <p>Μέσα κοινωνικής δικτύωσης:
+    <p><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/mavridis-philippe/">LinkedIn</a>
+    <p><i class="fa-brands fa-facebook"></i> <a href="https://www.facebook.com/philippe.mavridis.31/">Facebook</a>
+  </main>
 </body>
 </html>
-
+<!-- kate: replace-tabs false; indent-width: 2; -->
