--- a/portfolio.html
+++ b/portfolio.html
@@ -88,6 +88,18 @@
           <li>Web design
         </ul>
     </ul>
+
+    <h2>Διοργάνωση εκδηλώσεων</h2>
+    <ul>
+      <li><b>Μια γέφυρα μουσικής πάνω από τη Συγγρού (vol. 9) - Μουσική για βιόλα και ακορντεόν από την Ιαπωνία</b>
+        <p>Συνεργασία της Στέγης - Ίδρυμα Ωνάση με το Πάντειο Πανεπιστήμιο. Ομαδική πανεπιστημιακή εργασία.
+        <br><a href="https://www.onassis.org/el/whats-on/a-music-bridge-above-syngrou-avenue-vol-9" target="_blank">Πληροφορίες</a>
+        <ul>
+          <li>Συνεντεύξεις και φωτογράφιση καλλιτεχνών (<a href="https://www.athensvoice.gr/politismos/mousiki/839704/mia-gefura-mousikis-pano-apo-ti-suggrou-vol-9/" target="_blank">προβολή</a>)
+          <li>Σύνταξη δελτίου τύπου
+          <li>Social media content
+        </ul>
+    </ul>
   </main>
 </body>
 </html>
