--- a/pms/index.html
+++ b/pms/index.html
@@ -19,6 +19,8 @@
     <!--
     Ιστορικό σημαντικών αλλαγών
     '''''''''''''''''''''''''''
+        2024/11/25  * Σύνδεσμοι: +MS Teams Τσακαρέστου
+
         2024/11/25  * Προσθήκη εορτών
 
         2024/11/14  * Σύνδεσμοι: εμότζι και χρωματάκια
@@ -104,6 +106,7 @@
 
         <h3 id="links_study">📚&nbsp;&nbsp;Σπουδές</h3>
         <a href="https://openeclass.panteion.gr/" target="_blank">Open eClass</a>
+        <a href="https://teams.microsoft.com/l/team/19%3Ae4ddcb27245f405ba14d60ef180ab91b%40thread.tacv2/conversations?groupId=5010715f-5f63-4cae-a1bc-a2ed3c9c4bae&tenantId=03eb17fa-57e4-4135-a655-c46a52a5e21f" target="_blank">MS Teams - Entrepreneurial Journalism</a>
         <a href="https://cmc.panteion.gr/news-and-announcements/metaptyxiakoy" target="_blank">Ανακοινώσεις Μεταπτυχιακού</a>
         <a href="https://cmc.panteion.gr/images/Postgraduate/pms_programma_spoudon_2024-2025.pdf" target="_blank">Πρόγραμμα σπουδών ΠΜΣ 2024-25 (PDF)</a>
         <a href="https://cmc.panteion.gr/images/Postgraduate/Odigos_Spoudon_PMS_2023-24.pdf" target="_blank">Οδηγός σπουδών ΠΜΣ 2023-24 (PDF)</a>
