--- a/pms/index.html
+++ b/pms/index.html
@@ -15,7 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/list@6.1.15/index.global.min.js"></script>
     <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/rrule@6.1.15/index.global.min.js'></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="script.js?r4"></script>
+    <script src="script.js?r5"></script>
     <!--
     Ιστορικό σημαντικών αλλαγών
     '''''''''''''''''''''''''''
@@ -60,6 +60,8 @@
                     * Ακαδημαϊκό ημερολόγιο
                     * Πρόγραμμα σπουδών
                     * Σύνδεσμοι
+
+        2025/02/18  * Β΄ εξάμηνο...
       -->
   </head>
   <body>
