--- a/pms/index.html
+++ b/pms/index.html
@@ -90,10 +90,6 @@
         <div id="calendar"></div>
       </div>
 
-      <h2 class="collapsed">Ακαδημαϊκό ημερολόγιο</h2>
-      <div id="acad_sched" data-load="https://cmc.panteion.gr/images/2024/Academic_Calendar_2024-2025.jpg" style="display: none">
-      </div>
-
       <h2 class="collapsed">Πρόγραμμα σπουδών</h2>
       <div id="lesson_plan" data-load="https://cmc.panteion.gr/images/Postgraduate/programma_didaskalias_pms_2024a.jpg" style="display: none">
       </div>
@@ -104,7 +100,9 @@
         <a href="https://www.panteion.gr/" target="_blank">Πάντειο Πανεπιστήμιο</a>
         <a href="https://cmc.panteion.gr/" target="_blank">Τμήμα Επικοινωνίας Μέσων και Πολιτισμού</a>
         <a href="https://infosocietymediatechnology.tilda.ws/" target="_blank">ΠΜΣ «Κοινωνία της Πληροφορίας Μέσα και Πολιτισμός»</a>
-        <a href="https://cmc.panteion.gr/images/2024/Consultation_hours_winter_2024.pdf" target="_blank">Ώρες γραφείου καθηγητών (PDF)</a>
+        <a href="https://cmc.panteion.gr/images/2025/Consultation_hours_2025-spring.pdf" target="_blank">Ώρες γραφείου καθηγητών (PDF)</a>
+        <a href="https://cmc.panteion.gr/images/2024/Academic_Calendar_2023-2024.pdf" target="_blank">Ακαδημαϊκό ημερολόγιο (PDF)</a>
+        
 
         <h3 id="links_study">📚&nbsp;&nbsp;Σπουδές</h3>
         <a href="https://openeclass.panteion.gr/" target="_blank">Open eClass</a>
