--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Μαυρίδης Φίλιππος</title>
+  <title>Contact me - Philippe Mavridis</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Philippe Mavridis">
+  <meta name="copyright" content="Copyright (C) 2024-25 Philippe Mavridis">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
@@ -16,24 +18,26 @@
 <body>
   <aside>
     <a href="index.html"><img class="me" src="me.jpg" alt="Φωτογραφία"></a>
-    <h1>Φίλιππος Μαυρίδης</h1>
+    <h1>Philippe Mavridis</h1>
     <nav>
-      <a href='CV.pdf'><i class="fa-solid fa-file-pdf"></i><span>Λήψη βιογραφικού</span></a>
-      <a href="portfolio.html"><i class="fa-solid fa-briefcase"></i><span>Χαρτοφυλάκιο</span></a>
+      <a href='CV.pdf'><i class="fa-solid fa-file-pdf"></i><span>Download CV</span></a>
+      <a href="portfolio.html"><i class="fa-solid fa-briefcase"></i><span>Portfolio</span></a>
       <a href='https://www.linkedin.com/in/mavridis-philippe/'><i class="fa-brands fa-linkedin"></i><span>LinkedIn</span></a>
-      <a href='contact.html'><i class="fa-solid fa-envelope-open-text"></i><span>Επικοινωνία</span></a>
-      <a class="toggle-side" onclick="toggleSidebar()"><i class="fa-solid fa-angle-left"></i><span>Απόκρυψη</span></a>
+      <a href='contact.html'><i class="fa-solid fa-envelope-open-text"></i><span>Contact</span></a>
+      <a class="toggle-side" onclick="toggleSidebar()"><i class="fa-solid fa-angle-left"></i><span>Hide sidebar</span></a>
     </nav>
   </aside>
   <main>
-    <h2>Επικοινωνία</h2>
-    <p>Ηλεκτρονική αλληλογραφία:
-    <p><i class="fa-solid fa-at"></i> <a href="mailto:mavridisf@disroot.org">mavridisf@disroot.org</a>
+    <h2>Contact me</h2>
+    <h3>E-mail:</h3>
+    <p><i class="fa-solid fa-at"></i> <a href="mailto:mavridisf@disroot.org">philippe.mavridis@yandex.com</a>
     <p><i class="fa-solid fa-at"></i> <a href="mailto:mavridisf@gmail.com">mavridisf@gmail.com</a>
     <br><br>
-    <p>Μέσα κοινωνικής δικτύωσης:
-    <p><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/mavridis-philippe/">LinkedIn</a>
-    <p><i class="fa-brands fa-facebook"></i> <a href="https://www.facebook.com/philippe.mavridis.31/">Facebook</a>
+    <h3>Social media:</h3>
+    <p><i class="fa-brands fa-facebook"></i> Facebook: <a href="https://www.facebook.com/philippe.mavridis.31/">philippe.mavridis.31</a>
+    <p><i class="fa-brands fa-instagram"></i> Instagram: <a href="https://www.instagram.com/blu.256/">blu.256</a>
+    <p><i class="fa-brands fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/mavridis-philippe/">mavridis-philippe</a>
+    <p><i class="fa-brands fa-weixin"></i> WeChat ID: <b>wxid_g200x09u0n4422</b>
   </main>
 </body>
 </html>
