--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Μαυρίδης Φίλιππος</title>
+  <title>Philippe Mavridis</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Philippe Mavridis">
+  <meta name="copyright" content="Copyright (C) 2024-25 Philippe Mavridis">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
@@ -16,31 +18,28 @@
 <body>
   <aside>
     <a href="index.html"><img class="me" src="me.jpg" alt="Φωτογραφία"></a>
-    <h1>Φίλιππος Μαυρίδης</h1>
+    <h1>Philippe Mavridis</h1>
     <nav>
-      <a href='CV.pdf'><i class="fa-solid fa-file-pdf"></i><span>Λήψη βιογραφικού</span></a>
-      <a href="portfolio.html"><i class="fa-solid fa-briefcase"></i><span>Χαρτοφυλάκιο</span></a>
+      <a href='CV.pdf'><i class="fa-solid fa-file-pdf"></i><span>Download CV</span></a>
+      <a href="portfolio.html"><i class="fa-solid fa-briefcase"></i><span>Portfolio</span></a>
       <a href='https://www.linkedin.com/in/mavridis-philippe/'><i class="fa-brands fa-linkedin"></i><span>LinkedIn</span></a>
-      <a href='contact.html'><i class="fa-solid fa-envelope-open-text"></i><span>Επικοινωνία</span></a>
-      <a class="toggle-side" onclick="toggleSidebar()"><i class="fa-solid fa-angle-left"></i><span>Απόκρυψη</span></a>
+      <a href='contact.html'><i class="fa-solid fa-envelope-open-text"></i><span>Contact</span></a>
+      <a class="toggle-side" onclick="toggleSidebar()"><i class="fa-solid fa-angle-left"></i><span>Hide sidebar</span></a>
     </nav>
   </aside>
   <main>
-    <blockquote>
-      Το υπόβαθρό μου είναι η τεχνολογία και το πάθος μου ο πολιτισμός. Διαθέτω τεχνικές και οργανωσιακές γνώσεις από διάφορα πεδία, στα οποία συµπεριλαµβάνονται το ψηφιακό μάρκετινγκ, η ανάπτυξη και διαχείριση ιστοχώρων και webapps, η σελιδοποίηση, τα διανυσµατικά γραφικά, η ανάλυση µεγάλων όγκων δεδοµένων (big data), η οργάνωση της πληροφορίας, το µοντάζ, η σύνθεση μουσικής αλλά και η διοργάνωση εκδηλώσεων.
-    </blockquote>
-    <h2>Σπουδές</h2>
+    <h2>Current status</h2>
     <ul>
-      <li><b>Mεταπτυχιακός φοιτητής</b> (σήμερα)
-        <br>Τμήμα Επικοινωνίας, Μέσων και Πολιτισμού
-        <br>Πάντειο Πανεπιστήμιο Κοινωνικών και Πολιτικών Σπουδών
-      <li><b>Πτυχίο Επικοινωνίας, Μέσων και Πολιτισμού</b> (2024)
-        <br>Πάντειο Πανεπιστήμιο Κοινωνικών και Πολιτικών Σπουδών
+      <li style="color: darkgreen"><b>Open for work</b></li>
+      <li><b>Post-graduate student</b> (σήμερα)
+        <br>Dept. of Communication, Media &amp; Culture
+        <br>Panteion University of Social and Political Sciences
+      <li><b>Degree in Communication, Media &amp; Culture</b> (2024)
+        <br>Panteion University of Social and Political Sciences
     </ul>
-
-    <a href="CV.pdf">Διαβάστε περισσότερα στο βιογραφικό μου σημείωμα &gt;</a>
+    <p><a href="CV.pdf"><i class="fa-solid fa-glasses"></i>Read more in my CV &gt;</a>
+    <p><a href="portfolio.html"><i class="fa-solid fa-eye"></i>See more in my portfolio &gt;</a>
   </main>
-  <footer>Copyright &copy; 2024 Μαυρίδης Φίλιππος</footer>
 </body>
 </html>
 <!-- kate: replace-tabs false; indent-width: 2; -->
