--- a/portfolio.html
+++ b/portfolio.html
@@ -2,37 +2,85 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Χαρτοφυλάκιο - Φίλιππος Μαυρίδης</title>
+  <title>Portfolio - Philippe Mavridis</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Philippe Mavridis">
+  <meta name="copyright" content="Copyright (C) 2024-25 Philippe Mavridis">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/fontawesome.min.css" integrity="sha512-lauN4D/0AgFUGvmMR+knQnbOADyD/XuQ8VF18I8Ll0+TLvsujshyxvU+uzogmQbSq6qJd5jnUdYtK8ShxXMlSg==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/solid.min.css" integrity="sha512-bdqdas3Yr82pkTg5i0X1gcAT3tBXz/8H3J1ec7RyEKAvr/YiSCJNV2dnkukmL8CicjKb9rxmd+ILK8Kg2o2wvQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/brands.min.css" integrity="sha512-7rXIvd/xj1FnI2zKQjjXzDFxC4twqBByp8yxOgEQJs4C/aNzNyoQsOO7VxH0RgYNhbAYLJLwzqslaP50KTTHIQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="stylesheet" href="style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.js" integrity="sha512-Vtot07oogPy4e0JzAfUgyvia0fATgR1PWWNG89EeQgPXmaIhjGQIFijUVxRn0TScCMCH57Y7eJSixmYYDJkJ1A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.css" integrity="sha512-5gTxhbmgsOKfPP2+TeKslkMmyxF0Cmyr2YrJrfaXD/ChLHavFXGzDDG9ZiOca1P/2/5nXuujkB2BWymVKu1pPg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="style.css" rel="stylesheet">
   <script src="common.js"></script>
 </head>
 <body>
   <aside>
     <a href="index.html"><img class="me" src="me.jpg" alt="Φωτογραφία"></a>
-    <h1>Φίλιππος Μαυρίδης</h1>
+    <h1>Philippe Mavridis</h1>
     <nav>
-      <a href='CV.pdf'><i class="fa-solid fa-file-pdf"></i><span>Λήψη βιογραφικού</span></a>
-      <a href="portfolio.html"><i class="fa-solid fa-briefcase"></i><span>Χαρτοφυλάκιο</span></a>
+      <a href='CV.pdf'><i class="fa-solid fa-file-pdf"></i><span>Download CV</span></a>
+      <a href="portfolio.html"><i class="fa-solid fa-briefcase"></i><span>Portfolio</span></a>
       <a href='https://www.linkedin.com/in/mavridis-philippe/'><i class="fa-brands fa-linkedin"></i><span>LinkedIn</span></a>
-      <a href='contact.html'><i class="fa-solid fa-envelope-open-text"></i><span>Επικοινωνία</span></a>
-      <a class="toggle-side" onclick="toggleSidebar()"><i class="fa-solid fa-angle-left"></i><span>Απόκρυψη</span></a>
+      <a href='contact.html'><i class="fa-solid fa-envelope-open-text"></i><span>Contact</span></a>
+      <a class="toggle-side" onclick="toggleSidebar()"><i class="fa-solid fa-angle-left"></i><span>Hide sidebar</span></a>
     </nav>
   </aside>
   <main>
-    <h1>Χαρτοφυλάκιο</h1>
-    <h2>Επιμέλεια εκδόσεων</h2>
-    (γραφιστικά, σελιδοποίηση)
+    <h1>Portfolio</h1>
+    <h2>Graphic design</h2>
+    <table id="design-gallery">
+      <tbody>
+        <tr>
+          <td>2025</td>
+          <td class="gallery-design">
+            <a href="portfolio/2025_mikis_afisa.png" title="Αφίσα για εκδήλωση αφιερωμένη στο Μίκη Θεοδωράκη, 2025"></a>
+            <a href="portfolio/2025_mikis_prosklisi.png" title="Πρόσκληση για εκδήλωση αφιερωμένη στο Μίκη Θεοδωράκη, 2025" data-link="portfolio/2025_mikis_prosklisi.pdf"></a>
+            <a href="portfolio/2025_kakopoiisi_paramelisi.png" title="Αφίσα για ομιλία παιδοψυχολόγου «Κακοποίηση και παραμέληση: αναγνώριση ενδείξεων στο σχολικό περιβάλλον», 2025"></a>
+          </td>
+        </tr>
+        <tr>
+          <td>2024</td>
+          <td class="gallery-design">
+            <a href="portfolio/2024_symperilipsi.png" title="Αφίσα για την εκδήλωση «Συμπερίληψη στην Εκπαίδευση», 2024"></a>
+            <a href="portfolio/2024_symperilipsi_praktika.png" title="Εξώφυλλο βιβλίου πρακτικών για την εκδήλωση «Συμπερίληψη στην Εκπαίδευση», 2024"></a>
+            <a href="portfolio/2024_symperilipsi_prosklisi.png" title="Πρόσκληση για την εκδήλωση «Συμπερίληψη στην Εκπαίδευση», 2024" data-link="portfolio/2024_symperilipsi_prosklisi.pdf"></a>
+            <a href="portfolio/2024_symperilipsi_post.png" title="Ποστ για την εκδήλωση «Συμπερίληψη στην Εκπαίδευση», 2024"></a>
+            <a href="portfolio/2024_symperilipsi_story.png" title="Στόρι για την εκδήλωση «Συμπερίληψη στην Εκπαίδευση», 2024"></a>
+          </td>
+        </tr>
+        <tr>
+          <td>2023</td>
+          <td class="gallery-design">
+            <a href="portfolio/2023_theatroforoum_afisa.png" title="Αφίσα για την εκδήλωση «Ενδοσχολική Βία. Θεατρικό φόρουμ», 2023"></a>
+            <a href="portfolio/2023_theatroforoum_prosklisi.png" title="Πρόσκληση για την εκδήλωση «Ενδοσχολική Βία. Θεατρικό φόρουμ», 2023" data-link="portfolio/2023_theatroforoum_prosklisi.pdf"></a>
+          </td>
+        </tr>
+        <tr>
+          <td>2022</td>
+          <td class="gallery-design">
+            <a href="portfolio/2022_gkremizoume_afisa.png" title="Αφίσα για την εκδήλωση «Γκρεμίζουμε τη βία, χτίζουμε τη φιλία», 2022"></a>
+            <a href="portfolio/2022_gkremizoume_prosklisi.png" title="Πρόσκληση για την εκδήλωση «Γκρεμίζουμε τη βία, χτίζουμε τη φιλία», 2022" data-link="portfolio/2022_gkremizoume_prosklisi.pdf"></a>
+            <a href="portfolio/2022_gkremizoume_praktika.png" title="Εξώφυλλο βιβλίου πρακτικών για την εκδήλωση «Γκρεμίζουμε τη βία, χτίζουμε τη φιλία», 2022"></a>
+          </td>
+        </tr>
+        <tr>
+          <td>2021</td>
+          <td class="gallery-design">
+            <a href="portfolio/2021_astynomia.png" title="Αφίσα για την εκδήλωση «Αστυνομία και μαθητές», 2021"></a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <h2>Book publishing</h2>
+    (graphic design, page layout)
     <ul>
-      <li><b>Μαυρίδου Ν., Μαυρίδης Φ. (2019-σε εξέλιξη).
-        <br>Жар-Птица РКИ (Zhar-Ptica) - Μέθοδος ρωσικής γλώσσας ως ξένης για παιδιά και εφήβους.</b>
-        <br>Αθήνα: αυτοέκδοση. Ιστοσελίδα: <a href="https://www.zharptica-rki.ru/">www.zharptica-rki.ru</a>
+      <li><b>Mavridou N., Mavridis Ph. (2019-today).
+        <br>Жар-Птица РКИ (Zhar-Ptica) - Russian as a Foreign Language for children and adolescents (A1-B2).</b>
+        <br>Athens: self-publication. Website: <a href="https://www.zharptica-rki.ru/">www.zharptica-rki.ru</a>
         <br><small>ISBN:
           <a class="isbn">978-618-85837-0-2</a>
           <a class="isbn">978-618-85837-1-9</a>
@@ -53,54 +101,77 @@
           <a class="isbn">978-618-86228-4-5</a>
           <a class="isbn">978-618-86228-5-2</a></small>
 
-      <li><b>Χατσχαρτζή Θ. (2024).<br>Το Κλειδί της Επιτυχίας - Ρωσικά ως ξένη γλώσσα (B2).</b>
-        <br>Ωραιόκαστρο: αυτοέκδοση.
+      <li><b>Hatshartzi Th. (2024).<br>Το Κλειδί της Επιτυχίας (The Key of Success) - Russian as a Foreign Language for adults (B2).</b>
+        <br>Oreokastro: self-publication.
         <br><small>ISBN:
           <a class="isbn">978-618-00-5412-5</a></small>
 
-      <li><b>Μώκος Ε., Μαυρίδου Ν., Μαυρίδης Φ. (2016-2017).<br>Μαθαίνω Μαθηματικά (βιβλία 1-3)</b>
-        <br>Αθήνα: αυτοέκδοση.
+      <li><b>Mokos E., Mavridou N., Mavridis Ph. (2016-2017).<br>Μαθαίνω Μαθηματικά (Learning Maths) - books 1-3</b>
+        <br>Athens: self-publication.
         <br><small>ISBN:
           <a class="isbn">978-960-93-8671-5</a>
           <a class="isbn">978-960-93-8971-6</a>
           <a class="isbn">978-618-83075-0-6</a></small>
 
-      <li><b>Μαυρίδου Ν., Μώκος Ε., Μαυρίδης Φ. (2016-2017).<br>Τα πρώτα μου ελληνικά.</b>
-        <br>Αθήνα: αυτοέκδοση.
+      <li><b>Mavridou N., Mokos E., Mavridis Ph. (2016-2017).<br>Τα πρώτα μου ελληνικά (My First Greek) - Greek as a Foreign Language.</b>
+        <br>Athens: self-publication.
         <br><small>ISBN:
           <a class="isbn">978-960-93-8589-3</a>
           <a class="isbn">978-618-83075-1-3</a></small>
 
-      <li><b>50ό Δημοτικό Σχολείο Αθηνών (2018).<br>2018: Έτος Μαθηματικών (επιμ. Ε. Μώκος).</b>
-        <br>Αθήνα: 50ό Δημοτικό Σχολείο Αθηνών (εκδότης).
+      <li><b>50th Municipal Primary School of Athens (2018).<br>2018: Έτος Μαθηματικών.</b>
+        <br>Athens: 50th Municipal Primary School of Athens (publisher, ed. Mokos E.).
         <br><small>ISBN:
           <a class="isbn">978-618-00-0113-6</a></small>
     </ul>
 
-    <h2>Ιστότοποι</h2>
-    (σχεδίαση, διαχείριση υποδομής)
+    <h2>Websites</h2>
+    (web design, administration)
     <ul>
       <li><b>Жар-Птица РКИ (Zhar-Ptica)</b>
         <br><a href="https://www.zharptica-rki.ru/">www.zharptica-rki.ru</a>
         <ul>
-          <li>Διαχείριση τεχνικής υποδομής (FreeBSD server, Apache, MariaDB)
-          <li>Σχεδίαση διαδραστικών εκπαιδευτικών εφαρμογών Web
+          <li>Administration (FreeBSD, Apache, MariaDB)
+          <li>Interactive educational web-apps design
           <li>Web design
         </ul>
     </ul>
 
-    <h2>Διοργάνωση εκδηλώσεων</h2>
+    <h2>Event organisation</h2>
     <ul>
-      <li><b>Μια γέφυρα μουσικής πάνω από τη Συγγρού (vol. 9) - Μουσική για βιόλα και ακορντεόν από την Ιαπωνία</b>
-        <p>Συνεργασία της Στέγης - Ίδρυμα Ωνάση με το Πάντειο Πανεπιστήμιο. Ομαδική πανεπιστημιακή εργασία.
-        <br><a href="https://www.onassis.org/el/whats-on/a-music-bridge-above-syngrou-avenue-vol-9" target="_blank">Πληροφορίες</a>
+      <li><b>Μια γέφυρα μουσικής πάνω από τη Συγγρού (A musical bridge over Syngrou) vol. 9</b>
+        <p>Collaboration of Onassis Stegi with Panteion University. University team assignment.
+        <br><a href="https://www.onassis.org/el/whats-on/a-music-bridge-above-syngrou-avenue-vol-9" target="_blank">Information</a>
         <ul>
-          <li>Συνεντεύξεις και φωτογράφιση καλλιτεχνών (<a href="https://www.athensvoice.gr/politismos/mousiki/839704/mia-gefura-mousikis-pano-apo-ti-suggrou-vol-9/" target="_blank">προβολή</a>)
-          <li>Σύνταξη δελτίου τύπου
+          <li>Interviews and photography (<a href="https://www.athensvoice.gr/politismos/mousiki/839704/mia-gefura-mousikis-pano-apo-ti-suggrou-vol-9/" target="_blank">see here</a>)
+          <li>Creation of a press release
           <li>Social media content
         </ul>
     </ul>
   </main>
 </body>
+<script>
+  for (const a of document.querySelectorAll(".gallery-design a"))
+  {
+    let img = document.createElement("img");
+    img.classList.add("preview");
+    img.src = a.href;
+    if (a.hasAttribute("data-link"))
+    {
+      a.href = a.getAttribute("data-link");
+      a.removeAttribute("data-link");
+    }
+    img.title = a.title;
+    a.append(img);
+  }
+  let lightboxOptions = {
+    captionPosition: 'outside',
+    widthRatio: .8,
+    heightRatio: .7,
+    disableRightClick: true,
+    alertError: false
+  };
+  new SimpleLightbox('.gallery-design a', lightboxOptions);
+</script>
 </html>
 <!-- kate: replace-tabs false; indent-width: 2; -->
